<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
            android:shortcutId="static1"
            android:enabled="true"
            android:shortcutLongLabel="@string/jisuan"
            android:shortcutShortLabel="@string/app_name" tools:targetApi="n_mr1">
        <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.example.myapplication.Layout3"
                android:targetPackage="com.example.myapplication" />
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>

    <shortcut
            android:enabled="true"
            android:shortcutId="static2"
            android:shortcutLongLabel="@string/send"
            android:shortcutShortLabel="@string/butten" tools:targetApi="n_mr1">
        <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.example.myapplication.MainActivity"
                android:targetPackage="com.example.myapplication" />
    </shortcut>

</shortcuts>