<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
>
    <TextView android:id="@+id/color2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/test_2"
              android:layout_gravity="center"
              android:layout_margin="20dp"
              android:textSize="45sp"/>
    <TextView android:id="@+id/color"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/SXB"

              android:layout_gravity="center"
              android:textSize="45sp"
    />
    <RelativeLayout android:id="@+id/relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

    >
        <TextView android:text="@string/xiangDui"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:textSize="45sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
    </RelativeLayout>
    <GridLayout android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
    >
        <TextView android:text="@string/list"
                  android:textSize="22sp"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_columnWeight="1"
                  android:layout_height="wrap_content"/>
        <TextView android:text="@string/list"
                  android:textSize="22sp"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_columnWeight="1"
                  android:layout_height="wrap_content"/>
        <TextView android:text="@string/list"
                  android:textSize="22sp"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_columnWeight="1"
                  android:layout_height="wrap_content"/>
        <TextView android:text="@string/list"
                  android:textSize="22sp"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_columnWeight="1"
                  android:layout_height="wrap_content"/>

    </GridLayout>
    <ScrollView android:id="@+id/scale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:text="@string/gundong"
                      android:textSize="22sp"
                      android:gravity="center"
                      android:layout_width="match_parent"
                      android:layout_columnWeight="1"
                      android:layout_height="390dp"
                      android:background="#568078"/>
            <TextView android:text="@string/gundong"
                      android:textSize="22sp"
                      android:gravity="center"
                      android:layout_width="match_parent"
                      android:layout_columnWeight="1"
                      android:layout_height="390dp"
                      android:background="#999195"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>